# learning-monorepo

./: .gitignore  README.md
.github/workflows/: linux-build-test-lint.yml  mac-build-test-lint.yml  test-action.yml  windows-build-test-lint.yml
books/flying/drones/: faa-107.md  faa-trust.md
books/flying/helicopters/: faa-private-helicopter.md
books/flying/radio-communications/: radio-communication.md
code/: DIRS
code/design-docs/: build-system.md  operation.md  stopwatch.md  stopwatchfactory.md  virtual-machine.md
code/learning/programming-languages/bash/: notes.md
code/learning/programming-languages/commonlisp/: notes.md
code/learning/programming-languages/csharp/: notes.md
code/learning/programming-languages/haskell/: notes.md
code/learning/programming-languages/java/: notes.md
code/learning/programming-languages/javascript/bun/: readme.md
code/learning/programming-languages/javascript/deno/: readme.md
code/learning/programming-languages/kotlin/: notes.md
code/learning/programming-languages/lua/: notes.md
code/learning/programming-languages/objective-c/: notes.md
code/learning/programming-languages/ocaml/: notes.md
code/learning/programming-languages/perl/: notes.md
code/learning/programming-languages/php/: notes.md
code/learning/programming-languages/powershell/: notes.md
code/learning/programming-languages/r/: notes.md
code/learning/programming-languages/rust/: no_mangle.md
code/learning/programming-languages/swift/: notes.md
code/learning/programming-languages/zig/: notes.md
code/learning/tools/docker/: DIRS  notes.md  podman.md
code/learning/tools/docker/hello-world-alpine/: BUILD_linux  Dockerfile
code/learning/tools/docker/scratch/: BUILD  BUILD_linux  notes.md
code/programs/: DIRS
code/programs/bash/hello_world/: BUILD_mac
code/programs/c/hello_world/: .gitignore  BUILD  BUILD_linux  BUILD_mac  BUILD_mac_and_linux  BUILD_windows  CMakeLists.txt
code/programs/cobol/HELLO_WORLD/: BUILD  HELLO_WORLD_PGM.cbl
code/programs/commonlisp/hello-world/: BUILD
code/programs/erlang/hello_world/: .gitignore  BUILD  hello_world.erl
code/programs/fortran/hello_world/: BUILD_linux  BUILD_mac
code/programs/go/: DIRS
code/programs/go/hello_world/: BUILD
code/programs/go/monorepo_build/: .gitignore  BUILD_mac_and_linux  BUILD_windows  build_context.go  go.mod  logger.go  main.go  terminal_logger.go
code/programs/haskell/HelloWorld/: BUILD  Main.hs
code/programs/javascript/hello_world/: BUILD
code/programs/javascript/typescript-project-creator/: create-ts-package.js
code/programs/kotlin/HelloWorld/: .gitignore  BUILD
code/programs/lua/hello_world/: BUILD_mac_and_linux
code/programs/objective-c/HelloWorld/: BUILD_mac  main.m
code/programs/ocaml/hello_world/: .gitignore  BUILD_mac_and_linux  BUILD_windows  dune  dune-project  esy.json  hello_world.ml  hello_world.opam
code/programs/perl/hello_world/: BUILD
code/programs/php/hello_world/: BUILD_linux  BUILD_mac  Dockerfile  composer.json  index.php
code/programs/php/hello_world/src/: HelloWorld.php
code/programs/powershell/: DIRS
code/programs/powershell/Find-CLCompiler/: Find-CLCompiler.ps1
code/programs/powershell/Print-HelloWorld/: BUILD_mac_and_linux  BUILD_windows
code/programs/r/hello_world/: BUILD
code/programs/ruby/: DIRS  build.rb
code/programs/ruby/hello_world/: BUILD
code/programs/ruby/monorepo_build/: .rubocop.yml  .standard.yml  BUILD  Gemfile  build.rb
code/programs/ruby/monorepo_build/lib/: build_context.rb  command_line_arguments_provider.rb  command_result.rb  command_runner.rb  env_accessor.rb  exit_handler.rb  (+9 more)
code/programs/ruby/scaffold_scripts/: ocaml_project_creator.rb  php_project_creator.rb  python_project_creator.rb  typescript_project_creator.rb
code/programs/ruby/virtual_machine/: BUILD  BUILD_mac_and_linux  BUILD_win  bit.rb  program.rb
code/programs/rust/hello_world/: BUILD
code/programs/swift/HelloWorld/: BUILD_mac_and_linux
code/programs/zig/hello_world/: .gitignore  BUILD
(+16 files in other folders)
